[package]
name = "picturust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
image = "0.24.7"
jwalk = "0.8.1"
kamadak-exif = "0.5.5"
nasm = "0.0.1"
ravif = "0.11.2"
rayon = "1.7.0"
rgb = "0.8.36"
webp = "0.2.5"
