[package]
name = "picturust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81" }
image = { version = "0.25.0", features = ["webp", "avif"] }
jwalk = "0.8.1"
kamadak-exif = "0.5.5"
rayon = "1.9.0"

[dependencies.clap]
version = "4.5.3"
features = ["derive"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
