[package]
name = "picturust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86" }
image = "0.25.1"
jwalk = "0.8.1"
kamadak-exif = "0.5.5"
ravif = "0.11.5"
rayon = "1.10.0"
rgb = "0.8.37"
webp = "0.3.0"

[dependencies.clap]
version = "4.5.6"
features = ["derive"]
